--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "scss": "node-sass src/scss -o compressed  dist/css -w",
+    "scss": "node-sass src/scss -o dist/css -w",
     "babel": "babel src/js -d dist/js -w",
-    "autoprefixer": "postcss -u autoprefixer -r dist/css/*.css -w",
-    "css": "npm-run-all -s scss autoprefixer",
+    "postcss": "postcss -u autoprefixer postcss-cssnext -r dist/css/*.css -w",
+    "css": "npm-run-all -s scss postcss",
     "imagemin": "imagemin src/img/* --out-dir=dist/img -w",
     "serve": "browser-sync dist/ -w",
     "all": " npm-run-all -p css babel imagemin serve "
@@ -25,7 +25,8 @@
     "imagemin-cli": "^4.0.0",
     "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^6.0.1"
+    "postcss-cli": "^6.0.1",
+    "postcss-cssnext": "^3.1.0"
   },
   "babel": {
     "presets": [
