--- a/package.json
+++ b/package.json
@@ -1,43 +1,36 @@
 {
-  "name": "template",
+  "name": "template-gulp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "gulpfile.js",
   "scripts": {
-    "scss": "node-sass src/scss -o public/css -w",
-    "babel": "babel src/js -d public/js -w",
-    "postcss": "postcss -u autoprefixer postcss-cssnext -r public/css/*.css -w",
-    "css": "npm-run-all -s scss postcss",
-    "imagemin": "imagemin src/img/* --out-dir=public/img -w",
-    "serve": "browser-sync public/ -w",
-    "test-for-qualyti": "lighthouse http://127.0.0.1 ",
-    "all": " npm-run-all -p css babel imagemin serve "
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/smthspecial/template.git"
   },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/smthspecial/template/issues"
+  },
+  "homepage": "https://github.com/smthspecial/template#readme",
   "devDependencies": {
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
     "autoprefixer": "^9.4.2",
+    "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.26.3",
-    "chokidar-cli": "^1.2.1",
+    "del": "^3.0.0",
     "gulp": "^4.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-cli": "^2.0.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.2",
-    "gulp-watch": "^5.0.1",
-    "imagemin-cli": "^4.0.0",
-    "lighthouse": "^4.0.0-alpha.2-3.2.1",
-    "node-sass": "^4.11.0",
-    "npm-run-all": "^4.1.5",
-    "postcss-cli": "^6.0.1",
-    "postcss-cssnext": "^3.1.0",
-    "webpack": "^4.27.1"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
-  },
-  "dependencies": {}
+    "gulp-sourcemaps": "^2.6.4"
+  }
 }
